Fix spacing on index.html and space between submit button and footer on contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,18 @@ main {
     margin: 15px;
 }
 
-.intro-text {
-    margin: 0px 0px 30px 0px;
+/* main site styling */
+
+.h2-text {
+    margin: 10px 0px 30px 0px;
+}
+
+.intro-paragraph {
+    margin-top: 30px;
+}
+
+.contact-form {
+    margin-bottom: 30px;
 }
 
 /* Services styling */
